# Pre-commit_GitHubActions_demo

./: .dockerignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  requirements.dev.in  requirements.dev.txt  requirements.txt
.github/workflows/: blank.yml
src/pre_commit_githubactions_demo/: Dockerfile  __init__.py  pong.py  test_pong.py
tests/: test_pong.py
