[project]
name = "pre-commit-githubactions-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { email = "krastegar0@gmail.com" }
]
requires-python = ">=3.12.0"
dependencies = [
    "numpy==2.2.3",
    "pygame==2.6.1",
]

[project.scripts]
pre-commit-githubactions-demo = "pre_commit_githubactions_demo:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
